--- a/style.css
+++ b/style.css
@@ -1,31 +1,70 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
 *{
-    padding: 0;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
-main{
-    height: 100vh;
-    padding: 1em;
-   /* width: 80%;*/
-    margin-top: 0px;
-    margin-bottom: 40px;
-    margin-left: 10%;
-    margin-right:10%;
-}
+
 body{
-    background-color: rgb(151, 118, 52);
+    font-family: 'Lato', sans-serif;
+    background-color: white;
+    overflow: hidden;
+     margin: 0;
 }
 
-.nav-links{
-    background-color:ghostwhite;
-    display: flex;
-    justify-content: space-around;
-    padding: 1em 6rem;
-    width: 80vw;
-    margin: auto;
-    height:auto;
-float:right;
+
+
+
+
+
+
+main{
+    width: 100vw;
+    min-height: 100vh;
+    padding:50px;
+    transition: 0.5s linear;
+    position: relative;
 }
+
+
+.nav-links{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+      gap:60px;
+     width: 100vw;
+     padding: 0;
+     margin: 0;
+     position: fixed;
+     top: 0px;
+     color: white;
+     cursor: pointer;
+     background-color: gray;
+     height: 60px;
+    
+
+}
+ul{
+    list-style: none;
+}
+.nav-links ul{
+    display: flex;
+    justify-content: left;
+    align-items: flex-end;
+    gap: 200px;
+    position: fixed;
+    margin-top:-20px;
+    
+}
+.logo{
+    display:flex;
+    justify-content: space-around;
+    margin-left: -500px;
+    margin-top: 0px;
+
+}
+
 nav a{ 
     text-decoration: none;
     color: blue;
@@ -44,39 +83,55 @@ nav lI{
    
 
 .section-1{
+   background-image: url("../ebere_background.jpg");
+   background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+   background-size: contain;
+    padding: 80vh 100vw; 
     text-align: center;
+    position: absolute;
+    right: 0px;
+    top: 100px;
 }
-.circular-img{
-    width: 500px;
-    height: 500px;
-    border-radius: 50%;
-    overflow: hidden;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 80px;
+img{
+    max-width: 100%;
 }
+/* .circular-img{
+  
+ min-height: 80vh;
+    width: 100vw;
+    margin-left: 0;
+    margin-right: 0;
+    padding-top: 0;
+}  */
 .name{
     font: size 1000px; 
     font-weight: 500;
     font-style: italic;
-    color: white;
+    color: blue;
 }
 .stack{
     font-size: large;
     font-weight: 400;
-    color: white;
+    color: blue;
 }
 
 
 .section-2{
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-top: 30px;
+    /* display: flex; */
+    /* flex-direction: row-reverse; */
+    /* justify-content: center; */
+    /* align-items: center; */
+    /* flex-wrap: wrap; */
+    /* margin-top: 30px; */
+    
     padding-top: 80px;
+    margin-left: 500px;
+    position: relative;
+    float: right;
+    padding-left: 80px;
+    
 }
 .computer{
     padding-top: 30px;
@@ -93,11 +148,11 @@ nav lI{
 .my-skill{
     flex-basis: 15%;
     line-height: 6;
-    color: white;
+    color: blue;
     font-size:medium ;
 }
 div.section-2 ul li{
-    color:white;
+    color:blue;
     font-size: medium;
     font-weight: 700;
 }
@@ -106,11 +161,11 @@ div.section-2 h1{
     font-style: italic;
 }
 .section-3{
-    display: flex;
+    /* display: flex;
     
     justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap;
+    flex-wrap: wrap; */
     margin-top: 30px;
     padding-top: 80px;
 }
@@ -123,11 +178,11 @@ div.section-2 h1{
 .soft-skills{
     flex-basis: 60%;
     line-height: 5;
-    color: white;
+    color: blue;
     font-size:medium ;
 }
 div.section-3 ul li{
-    color:white;
+    color:blue;
     font-size: medium;
     font-weight: 700;
 }
@@ -137,7 +192,7 @@ div.section-3 h1{
 }
 .section-4{
     text-align: center;
-    color: white;
+    color: blue;
     line-height: 1.6;
     padding-top: 30px;
     padding-bottom: 20px;
@@ -148,42 +203,63 @@ div.section-4 h1{
 
 .button{
     text-align: right;
-    background-color: rgb(127, 127, 209);
+    background-color: rgb(63, 63, 248);
     color: white;
     align-items: center;
-    padding: 30px;
+    border: 0;
+    border-radius: 6;
+    cursor: pointer;
+    font-family: inherit;
+    padding: 8px 30px;
+    margin: 5px;
+    font-size: 14px;
+
+    /* padding: 30px; */
     
-    border-radius: 10px;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    margin:10px
+    /* border-radius: 10px; */
+    /* -moz-border-radius: 10px; */
+    /* -webkit-border-radius: 10px; */
+    /* margin:10px */
 
 }
 
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    color: white;
-    text-align: center;
-    padding-top: 10px;
-  /*  background-color:ghostwhite ;*/
-    margin-bottom: 0px;
-    height:70px ;
- }
+
+
  .footer{
      display: flex;
      justify-content: flex-end;
+     gap: 50px;
+    
      
  }
 
+ .twit{
+    color: #6e6c6c;
+    transition: color 0.3s;
+    
+}
+ 
+.link{
+    color: #6e6c6c;
+    transition: color 0.3s;
+    
+}
+ 
+.git{
+    color: #6e6c6c;
+    transition: color 0.3s;
+    
 
- .foter-img{
-    padding-top: 40px;
-    height: 70px;
-    width: 70px;
-    padding-left: 20px;
-    
-    
- }
+}
+  
+.twit:hover{
+    color: #333333;
+}
+.link:hover{
+    color: #333333;
+}
+.git:hover{
+    color: #333333;
+}
+
+
